--- a/src/templates/countrys.hbs
+++ b/src/templates/countrys.hbs
@@ -1,1 +1,1 @@
-<li><img class='flag' src='{{flag}}' alt='{{name}}' />{{name}}</li>
+<li class="country-item"><img src='{{flag}}' alt='{{name}}' />{{name}}</li>
