--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,12 @@
 * {
   box-sizing: border-box;
 }
+p,
+ul,
+h3 {
+  padding: 0px;
+  margin: 0px;
+}
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
@@ -15,4 +21,54 @@ body {
   padding: 8px;
   max-width: 320px;
   margin-bottom: 16px;
+}
+.country-item {
+  display: flex;
+  align-items: center;
+
+  font-size: 20px;
+  font-weight: 900;
+}
+
+.country-item:not(:last-child) {
+  margin-bottom: 8px;
+}
+
+.country-item img {
+  width: 50px;
+  height: 40px;
+  margin-right: 10px;
+}
+
+.country-info img {
+  width: 70px;
+  height: 60px;
+  margin-right: 10px;
+}
+
+.country-info div {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.country-info p {
+  margin-bottom: 8px;
+}
+
+.country__title {
+  font-size: 25px;
+  font-weight: 900;
+}
+
+.country__pre-title {
+  font-size: 16px;
+  font-weight: 900;
+}
+.languages {
+  margin-left: 100px;
+}
+
+.languages__item {
+  list-style: none;
 }
